--- a/HTM/index.html
+++ b/HTM/index.html
@@ -12,5 +12,142 @@
     <div class="divider"></div>
     <a href="#">Don't Miss Peonies Season! ORDER TODAY</a>
   </div>
+
+  <div class="nav_1">
+      <div class="Flowerimg">
+    <img src="../Flowerimg/proflowers-logo.webp" class="Flowerimg">
+    </div>
+    <div class="Flowerimg-1">
+     <div class="nav2-img">
+        <img src="../Flowerimg/8666693_search_icon.png" class="search">
+        <p class="text-3">Search</p>
+     </div>
+     <p class="text-3">Help</p>
+     <p class="text-3">ProPerks</p>
+      <p class="text-3">Sign In</p> 
+      <img src="../Flowerimg/pngfind.com-cart-icon-png-3119177.png" class="search">
+      </div>
+  </div>
+
+
+  <div class="parents-1">
+    <div class="parents_wine_menu_list">
+
+    <div class="wine_menu_1">
+        <div class="dropdown">
+  <button class="button-1">Father's Day</button>
+  <div class="dropdown-content">
+    <a href="#">Featured Father's Day</a>
+    <a href="#">All Father's Day</a>
+    <a href="#">Father's Day Plants</a>
+    <a href="#">Father's Day Flowers</a>
+     <a href="#">Meat & Cheese</a>
+       <a href="#">Cookies & Baked Goods</a>
+        <a href="#">House Plants</a>
+
+  </div>
+</div>
+    </div>
+
+     <div class="wine_menu_2">
+        <div class="dropdown">
+      <button class="button-1">Most Popular</button>
+   <div class="dropdown-content">
+    <a href="#">Popular Flowers</a>
+    <a href="#">Roses</a>
+    <a href="#">Orchids</a>
+    <a href="#">Daisies</a>
+     <a href="#">Peonies</a>
+       <a href="#">Tulips</a>
+        <a href="#">
+All Flowers</a>
+
+  </div>
+  </div>
+</div>
+
+      <div class="wine_menu_3">
+        <div class="dropdown">
+  <button class="button-1">Brithday</button>
+  <div class="dropdown-content">
+    <a href="#">Birthday Flowers</a>
+    <a href="#">Birthday Plants</a>
+    <a href="#">For Mom</a>
+    <a href="#">For Friend</a>
+     <a href="#">For Wife</a>
+       <a href="#">For Daughter</a>
+        <a href="#">For Him</a>
+
+  </div>
+      </div>
+      </div>
+
+
+       <div class="wine_menu_4">
+
+        <div class="dropdown">
+  <button class="button-1">Sympathy</button>
+  <div class="dropdown-content">
+    <a href="#">Funeral Flowers</a>
+    <a href="#">Sympathy Plants</a>
+    <a href="#">Sympathy Flowers</a>
+    <a href="#">All Funeral</a>
+     <a href="#">Funeral Plants</a>
+       <a href="#">Pet Sympathy</a>
+        <a href="#">Memorial Plants</a>
+    </div>
+  </div>
+  </div>
+
+      <div class="wine_menu_5">
+
+        <div class="dropdown">
+  <button class="button-1">Occasions</button>
+  <div class="dropdown-content">
+    <a href="#">Seasonal Occasions</a>
+    <a href="#">Graduation</a>
+    <a href="#">Anniversary</a>
+    <a href="#">Good Luck</a>
+     <a href="#">Religious</a>
+       <a href="#">Miss You</a>
+        <a href="#">Thinking of You</a>
+    </div>
+  </div>
+  </div>
+
+
+        <div class="wine_menu_6">
+
+        <div class="dropdown">
+  <button class="button-1">Flowers</button>
+  <div class="dropdown-content">
+    <a href="#">Featured Flowers</a>
+    <a href="#">Popular Flowers</a>
+    <a href="#">Roses</a>
+    <a href="#">Lilies</a>
+     <a href="#">Orchids</a>
+       <a href="#">Tulips</a>
+        <a href="#">Sunflowers</a>
+    </div>
+  </div>
+  </div>
+
+           
+             <div class="wine_menu_10">
+                <div class="dropdown">
+  <button class="button-1">Gift & Plants </button>
+  <div class="dropdown-content">
+    <a href="#">Shop Gifts</a>
+    <a href="#">Flowering Plants</a>
+    <a href="#">Shop Plants</a>
+    <a href="#">Teddy Bears</a>
+     <a href="#">Meat & Cheese</a>
+       <a href="#">Fruit Baskets</a>
+
+          </div>
+       </div>
+        </div>
+</div>
+  </div>
 </body>
 </html>
