--- a/HTM/index.html
+++ b/HTM/index.html
@@ -149,5 +149,35 @@ All Flowers</a>
         </div>
 </div>
   </div>
+
+
+  <div class="parents_main2">
+    <img src="../Flowerimg/0868_PF_Summer25-Site_Summer_SWAG_Flip_v2.webp" class="bacground_img">
+
+     <div class="position-1">
+      <p class="find">Find the perfect gift</p>
+      <p class="star">Start here to narrow your search</p>
+
+      <div class="star_1">
+
+         <fieldset class="fieldset-1">
+            <legend>Sending to</legend> 
+            <input type="text" placeholder="Delivery Zip Code">
+        </fieldset>
+
+        <div class="star_2">
+          <fieldset  class="fieldset-2">
+            <legend>Delivery Date</legend> 
+            <input type="text" placeholder="MM/DD/YYYY">
+        </fieldset>
+       <img src="../Flowerimg/Calendar alt.svg" class="Calendar-img">
+        </div>
+
+      </div>
+      <button class="buttonserch">Search Available Gifts</button>
+     </div>
+     
+
+  </div>
 </body>
 </html>
