--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@ All Flowers</a>
       </div>
       <button class="buttonserch">Search Available Gifts</button>
      </div>
-     
-
+    
   </div>
+
+
+  <div class="parents-1"></div>
 </body>
 </html>
