--- a/HTML/index.html
+++ b/HTML/index.html
@@ -183,9 +183,9 @@ All Flowers</a>
 
       <div class="summer_img">
           
-        <div class="summer_img-1">
+        <div class=".Farther_img-1">
         <div class="A">
-          <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
+          <img src="../Flowerimg/blue_img1.jpg" class="Lilies">
         </div>
         <p class="B">Lucky Lily Bouquet</p>
         <p class="B1">$55 - $95</p>
@@ -193,7 +193,7 @@ All Flowers</a>
 
          <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/R5651D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
+          <img src="../Flowerimg/blue_img2.jpg" class="Lilies">
         </div>
         <p class="B">Gleeful Bouquet</p>
         <p class="B1">$50 - $90</p>
@@ -201,7 +201,7 @@ All Flowers</a>
 
         <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
+          <img src="../Flowerimg/img_blue3.jpg" class="Lilies">
         </div>
         <p class="B">Peony & Ranunculus<br> Garden Bouquet</p>
         <p class="B1">$65 - $100</p>
@@ -209,15 +209,15 @@ All Flowers</a>
 
          <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/FM075D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
+          <img src="../Flowerimg/blue_img4.jpg" class="Lilies">
         </div>
         <p class="B">The Dreamscape Bouquet</p>
         <p class="B1">$55 - $75</p>
         </div>
       </div>
+         <button class="button_4">SHOP SUMMER</button>
      </div>
-      <button class="button_2">SHOP SUMMER</button>
-  </div>
+
 
 <div class="happiest">
   <div class="happiest_1">
@@ -228,10 +228,53 @@ All Flowers</a>
     <div class="happiest_3">
      <p class="happiest_text">happiest of dad's days</p>
      <p class="happiest_text-1">Say thanks to day with a special gift this Farther's Day ,June<br>15th. </p>
-       <button class="button_3">SHOP FATHER,S DAY</button>
+       <button class="button_3">SHOP FATHER'S DAY</button>
     </div>
 
   </div>
 </div>
+
+
+
+
+ <div class="parents_2">
+      <p class="summer_text">father’s day favorites</p>
+
+      <div class="Farther_img">
+          
+        <div class="Farther_img-1">
+        <div class="K">
+          <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+        </div>
+        <p class="C">Cerulean Waves <br>Bouquet</p>
+        <p class="C1">$55 - $75</p>
+        </div>
+
+         <div class="Farther_img-1">
+        <div class="K">
+          <img src="../Flowerimg/R5651D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+        </div>
+        <p class="C">Lucky Day Money Tree</p>
+        <p class="C1">$60</p>
+        </div>
+
+        <div class="Farther_img-1">
+        <div class="K">
+          <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+        </div>
+        <p class="C">Restorative Pause <br>Bouquet</p>
+        <p class="C1">$55 - $75</p>
+        </div>
+
+         <div class="Farther_img-1">
+        <div class="K">
+          <img src="../Flowerimg/FM075D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+        </div>
+        <p class="C">Father's Day Crunch 'n<br> Munch Snack & Nut<br> Variety Tray Gift Box</p>
+        <p class="C1">$60</p>
+        </div>
+      </div>
+         <button class="button_4">SHOP FATHER'S DAY GIFTS</button>
+     </div>
 </body>
 </html>
