--- a/HTML/index.html
+++ b/HTML/index.html
@@ -185,7 +185,7 @@ All Flowers</a>
           
         <div class=".Farther_img-1">
         <div class="A">
-          <img src="../Flowerimg/blue_img1.jpg" class="Lilies">
+          <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
         </div>
         <p class="B">Lucky Lily Bouquet</p>
         <p class="B1">$55 - $95</p>
@@ -193,7 +193,7 @@ All Flowers</a>
 
          <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/blue_img2.jpg" class="Lilies">
+           <img src="../Flowerimg//R5651D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
         </div>
         <p class="B">Gleeful Bouquet</p>
         <p class="B1">$50 - $90</p>
@@ -201,7 +201,7 @@ All Flowers</a>
 
         <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/img_blue3.jpg" class="Lilies">
+         <img src="../Flowerimg/FM075D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
         </div>
         <p class="B">Peony & Ranunculus<br> Garden Bouquet</p>
         <p class="B1">$65 - $100</p>
@@ -209,13 +209,13 @@ All Flowers</a>
 
          <div class="summer_img-1">
         <div class="A">
-          <img src="../Flowerimg/blue_img4.jpg" class="Lilies">
+           <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies">
         </div>
         <p class="B">The Dreamscape Bouquet</p>
         <p class="B1">$55 - $75</p>
         </div>
       </div>
-         <button class="button_4">SHOP SUMMER</button>
+         <button class="button_2">SHOP SUMMER</button>
      </div>
 
 
@@ -244,7 +244,7 @@ All Flowers</a>
           
         <div class="Farther_img-1">
         <div class="K">
-          <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+          <img src="../Flowerimg/blue_img1.jpg" class="Lilies_1">
         </div>
         <p class="C">Cerulean Waves <br>Bouquet</p>
         <p class="C1">$55 - $75</p>
@@ -252,7 +252,7 @@ All Flowers</a>
 
          <div class="Farther_img-1">
         <div class="K">
-          <img src="../Flowerimg/R5651D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+          <img src="../Flowerimg/blue_img2.jpg" class="Lilies_1">
         </div>
         <p class="C">Lucky Day Money Tree</p>
         <p class="C1">$60</p>
@@ -260,7 +260,7 @@ All Flowers</a>
 
         <div class="Farther_img-1">
         <div class="K">
-          <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+          <img src="../Flowerimg/img_blue3.jpg" class="Lilies_1">
         </div>
         <p class="C">Restorative Pause <br>Bouquet</p>
         <p class="C1">$55 - $75</p>
@@ -268,7 +268,7 @@ All Flowers</a>
 
          <div class="Farther_img-1">
         <div class="K">
-          <img src="../Flowerimg/FM075D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="Lilies_1">
+          <img src="../Flowerimg/blue_img4.jpg" class="Lilies_1">
         </div>
         <p class="C">Father's Day Crunch 'n<br> Munch Snack & Nut<br> Variety Tray Gift Box</p>
         <p class="C1">$60</p>
@@ -276,5 +276,25 @@ All Flowers</a>
       </div>
          <button class="button_4">SHOP FATHER'S DAY GIFTS</button>
      </div>
+
+
+<!----->
+
+<div class="blooms">
+
+  <div class="blooms_2">
+
+    <div class="blooms_3">
+     <p class="blooms_text">birthday blooms</p>
+     <p class="blooms_text-1">Deliver a bouquet of happiness for their big day. </p>
+       <button class="button_5">SHOP BIRTHDAY</button>
+    </div>
+
+  </div>
+
+   <div class="happiest_1">
+    <img src="../Flowerimg/bty_img.webp" class="blooms_img">
+  </div>
+</div>
 </body>
 </html>
