--- a/HTML/index.html
+++ b/HTML/index.html
@@ -383,10 +383,49 @@ All Flowers</a>
     
      <!------->
      <div class="parents_7">
+      <img src="../Flowerimg/pnk_bk_img.webp" class="pnk_bk_img">
       <div class="section_1">
-        
+       <p class="pnk_text">don't miss peonies season!</p>
+       <p class="pank_txt_1">The ever-popular  peonies only bloom for a limited time, order today.</p>
+        <button class="button_7">SHOP PEONIES</button>
       </div>
      </div>
+  
+  <!----->
+
+  <div class="parents_main_4">
+            <div class="parents_main_child4">
+
+                <div class="Hire-6" style="--k:1">
+                    <img src="../Flowerimg/carnations_img.avif" alt="img_01">
+                </div>
+
+                <div class="Hire-6" style="--k:2">
+                    <img src="../Flowerimg/Exotic_flower.avif" alt="img_02">
+                </div>
+
+                <div class="Hire-6" style="--k:3">
+                    <img src="../Flowerimg/flower_box.avif" alt="img_03">
+                </div>
+
+                <div class="Hire-6" style="--k:4">
+                    <img src="../Flowerimg/imagecombo_img.avif" alt="img_04">
+                </div>
+
+                <div class="Hire-6" style="--k:5">
+                    <img src="../Flowerimg/lilies.avif" alt="img_05">
+                </div>
+
+                <div class="Hire-6" style="--k:6">
+                    <img src="../Flowerimg/orchids_img.avif" alt="img_06">
+                </div>
+
+                <div class="Hire-6" style="--k:7">
+                    <img src="../Flowerimg/roses_img.avif" alt="img_07">
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
