--- a/HTML/index.html
+++ b/HTML/index.html
@@ -426,6 +426,46 @@ All Flowers</a>
             </div>
         </div>
     </div>
+<!---->
 
+<div class="parents_6">
+      <p class="summer_text">local florist delivery</p>
+
+      <div class=" Sweet_img">
+          
+        <div class=" Sweet_img-1">
+        <div class="V">
+          <img src="../Flowerimg/k1_imgh.webp" class=" Sweet_1">
+        </div>
+        <p class="D">Sweet As Can Be <br>Bouquet</p>
+        <p class="D1">$55 - $75</p>
+        </div>
+
+         <div class=" Sweet_img-1">
+        <div class="V">
+          <img src="../Flowerimg/k2_img.webp" class="Sweet_1">
+        </div>
+        <p class="D">Neon Lights Bouquet</p>
+        <p class="D1">$55 - $75</p>
+        </div>
+
+        <div class=" Sweet_img-1">
+        <div class="V">
+          <img src="../Flowerimg/k3_img.webp" class=" Sweet_1">
+        </div>
+        <p class="D">Grapeful Bouquet</p>
+        <p class="D1">$55 - $100</p>
+        </div>
+
+         <div class=" Sweet_img-1">
+        <div class="V">
+          <img src="../Flowerimg/k4_img.webp" class="Sweet_1">
+        </div>
+        <p class="D">Vintage Glamour <br>Bouquet</p>
+        <p class="D1">$45 - $65</p>
+        </div>
+      </div>
+         <button class="button_8">SHOP LOCAL</button>
+     </div>
 </body>
 </html>
