--- a/HTML/index.html
+++ b/HTML/index.html
@@ -434,7 +434,7 @@ All Flowers</a>
       <div class=" Sweet_img">
           
         <div class=" Sweet_img-1">
-        <div class="V">
+        <div class="M">
           <img src="../Flowerimg/k1_imgh.webp" class=" Sweet_1">
         </div>
         <p class="D">Sweet As Can Be <br>Bouquet</p>
@@ -442,7 +442,7 @@ All Flowers</a>
         </div>
 
          <div class=" Sweet_img-1">
-        <div class="V">
+        <div class="M">
           <img src="../Flowerimg/k2_img.webp" class="Sweet_1">
         </div>
         <p class="D">Neon Lights Bouquet</p>
@@ -450,7 +450,7 @@ All Flowers</a>
         </div>
 
         <div class=" Sweet_img-1">
-        <div class="V">
+        <div class="M">
           <img src="../Flowerimg/k3_img.webp" class=" Sweet_1">
         </div>
         <p class="D">Grapeful Bouquet</p>
@@ -458,7 +458,7 @@ All Flowers</a>
         </div>
 
          <div class=" Sweet_img-1">
-        <div class="V">
+        <div class="M">
           <img src="../Flowerimg/k4_img.webp" class="Sweet_1">
         </div>
         <p class="D">Vintage Glamour <br>Bouquet</p>
