--- a/HTML/index.html
+++ b/HTML/index.html
@@ -467,5 +467,50 @@ All Flowers</a>
       </div>
          <button class="button_8">SHOP LOCAL</button>
      </div>
+
+<div class="parents_8">
+
+  <img src="../Flowerimg/0868_PF_Summer25-Site_Pride_Hero_1.webp" class="bpl_bk_img">
+      <div class="section_2">
+       <p class="bpl_text">bursting  with pride</p>
+       <p class="bpl_txt_1">Pride gifts and flowers full of color that they'|| love.</p>
+        <button class="button_7">SHOP PRIDE</button>
+      </div>
+</div>
+
+
+<div class="parents_main_5">
+            <div class="parents_main_child5">
+
+                <div class="Hire-7" style="--k:1">
+                 <img src="../Flowerimg/carnations_img.avif" alt="img_01">
+                </div>
+
+                <div class="Hire-7" style="--k:2">
+                    <img src="../Flowerimg/roses_img.avif" alt="img_07">
+                </div>
+
+                <div class="Hire-7" style="--k:3">
+                    <img src="../Flowerimg/orchids_img.avif" alt="img_06">
+                </div>
+
+                <div class="Hire-7" style="--k:4">
+                     <img src="../Flowerimg/lilies.avif" alt="img_05">
+                </div>
+
+                <div class="Hire-7" style="--k:5">
+                     <img src="../Flowerimg/imagecombo_img.avif" alt="img_04">
+                </div>
+
+                <div class="Hire-7" style="--k:6">
+                       <img src="../Flowerimg/flower_box.avif" alt="img_03">
+                </div>
+
+                <div class="Hire-7" style="--k:7">
+                      <img src="../Flowerimg/Exotic_flower.avif" alt="img_02">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
