--- a/HTML/index.html
+++ b/HTML/index.html
@@ -512,5 +512,88 @@ All Flowers</a>
             </div>
         </div>
     </div>
+
+    <div class="parensts_10">
+      <img src="../Flowerimg/proflowers-logo.webp" class="proflowers-logo-1">
+
+      <div class="footer">
+       <div class="footer_1">
+        <p class="footer_text">Help</p>
+        <ul>
+          <li>Customer</li>
+          <li>Service</li>
+          <li>Sitemap</li>
+        </ul>
+
+        <p class="footer_text">Account</p>
+        <li>Manage Your Account</li>
+        <li>Track Your Order</li>
+        <li>Order History</li>
+         <li>Reminder</li>
+         <li>ProPerks</li>
+
+          <p class="footer_text">Company</p>
+          <li>About Proflowers</li>
+          <li>Careers</li>
+          <li>Delivery Policy</li>
+          <li>Ethical Labor Standards</li>
+          <li>Join Our Florist Network</li>
+          <li>Affiliate Program</li>
+          <li>Proflowers Blog</li>
+       </div>
+
+       <div class="footer_2">
+        <p class="footer_text">Shop Now</p>
+        <p class="footer_text">Flower Delivery</p>
+
+        <ul>
+         <li>Mixed Flower Bouquets</li>
+         <li>Same Day Flower Delivery</li>
+         <li>Roses & Rose Bouquets</li>
+         <li>Send Flowers</li>
+         <li>Canada Delivery</li>
+         <li>International Delivery</li>
+        </ul>
+          
+         <p class="footer_text">Plant Delivery</p>
+         <li>House Plants</li>
+         <li>Flowering Plants</li>
+         <li>Bonsai & Bamboo</li>
+         <li>Succulents</li>
+
+         <p class="footer_text">Gift Delivery</p>
+         <li>Gift Baskets</li>
+          <li>Chocolates</li>
+           <li>Corporate Gifting</li>
+            <li>Fruit Baskets</li>
+       </div>
+
+       <div class="footer_3">
+
+        <p class="footer_text">Occasions</p>
+         <p class="footer_text">Shop by Occasion</p>
+         <li>Birthday Delivery</li>
+         <li>Sympathy Flowers</li>
+         <li>Sympathy Plants</li>
+         <li>Just Because</li>
+         <li>Anniversary</li>
+         <li>Congratulations</li>
+         <li>Get Well</li>
+         <li>Holidays</li>
+    
+          <p class="footer_text">Shop by Holiday</p>
+          <li>Valentine's Day</li>
+          <li>Easter</li>
+          <li>Mother's Day</li>
+          <li>Thanksgiving</li>
+          <li>Christmas</li>
+
+       </div>
+
+       <div class="footer_4"></div>
+
+       </div>
+
+    </div>
 </body>
 </html>
