--- a/HTML/index.html
+++ b/HTML/index.html
@@ -544,7 +544,7 @@ All Flowers</a>
 
        <div class="footer_2">
         <p class="footer_text">Shop Now</p>
-        <p class="footer_text">Flower Delivery</p>
+        <p class="footer_text"><b>Flower Delivery</b></p>
 
         <ul>
          <li>Mixed Flower Bouquets</li>
@@ -555,7 +555,7 @@ All Flowers</a>
          <li>International Delivery</li>
         </ul>
           
-         <p class="footer_text">Plant Delivery</p>
+         <p class="footer_text"><b>Plant Delivery</b></p>
          <li>House Plants</li>
          <li>Flowering Plants</li>
          <li>Bonsai & Bamboo</li>
@@ -571,7 +571,7 @@ All Flowers</a>
        <div class="footer_3">
 
         <p class="footer_text">Occasions</p>
-         <p class="footer_text">Shop by Occasion</p>
+         <p class="footer_text"><b>Shop by Occasion</b></p>
          <li>Birthday Delivery</li>
          <li>Sympathy Flowers</li>
          <li>Sympathy Plants</li>
@@ -590,10 +590,56 @@ All Flowers</a>
 
        </div>
 
-       <div class="footer_4"></div>
+       <div class="footer_4">
+   <p class="footer_text">Freshen up your inbox</p>
 
+  <div class="footer-form_1">
+    <input class="footer-form" type="text" placeholder="Enter your email">
+    <button class="button_form">Sign Up</button>
+  </div>
+ 
+     <p class="footer_text"><b>Contact</b> </p>
+     <li>We are here for you 24 hours a day</li>
+     <li>Track Your Order</li>
+     <li>1.800.580.2913</li>
+     <li>ADA Help</li>
+
+     <div class="footerchilde_1">
+       <div class="tooltipexm_4">
+                  <img src="../Flowerimg/icons8-facebook-30.png" class="facebook_img">
+                <div class="tooltipexam_text-4">facebook</div>
+           </div>
+
+           <div class="tooltipexm_4">
+                  <img src="../Flowerimg/icons8-linkedin-50.png" class="facebook_img">
+                <div class="tooltipexam_text-4">linkedin</div>
+           </div>
+
+           <div class="tooltipexm_4">
+                  <img src="../Flowerimg/youtube-123.svg" class="facebook_img">
+                <div class="tooltipexam_text-4">youtube</div>
+           </div>
+
+           <div class="tooltipexm_3">
+                  <img src="../Flowerimg/tiktok.svg" class="tiktok_img">
+                <div class="tooltipexam_text-3">Tiktok</div>
+           </div>
+         
+            <div class="tooltipexm_3">
+                  <img src="../Flowerimg/pinterest-round-logo-svgrepo-com.svg" class="tiktok_img">
+                <div class="tooltipexam_text-3">Pinterest</div>
+           </div>
+
+     </div>
+
+   </div>
        </div>
-
+    <p class="lasfooter_text"><span>Website Accessibility</span>
+<span> Terms & Conditions</span>
+<span>Terms & Conditions</span>
+<span>Privacy Policy
+CCPA</span>
+©2025 FTD, LLC Chicago, IL</p>
     </div>
 </body>
 </html>
