--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,12 @@
      <p class="text-3">Help</p>
      <p class="text-3">ProPerks</p>
       <p class="text-3">Sign In</p> 
-      <img src="../Flowerimg/pngfind.com-cart-icon-png-3119177.png" class="search">
+
+       <div class="tooltipexm_41">
+                  <img src="../Flowerimg/pngfind.com-cart-icon-png-3119177.png" class="search">
+                <div class="tooltipexam_text-41">Cart count</div>
+           </div>
+
       </div>
   </div>
 
