--- a/HTML/Summar_flower.html
+++ b/HTML/Summar_flower.html
@@ -155,5 +155,23 @@ All Flowers</a>
 </div>
   </div>
 
+      <div class="parents2">
+   <div class="star_1">
+            <p class="star_3">Start here</p>
+         <fieldset class="fieldset-1">
+            <legend>Sending to</legend> 
+            <input type="text" placeholder="Delivery Zip Code">
+        </fieldset>
+
+        <div class="star_2">
+          <fieldset  class="fieldset-2">
+            <legend>Delivery Date</legend> 
+            <input type="text" placeholder="MM/DD/YYYY">
+        </fieldset>
+       <img src="../Flowerimg/Calendar alt.svg" class="Calendar-img">
+        </div>
+        <div class="shopnow">SHOPE NOW</div>
+      </div>
+      </div>
 </body>
 </html>
