--- a/HTML/Summar_flower.html
+++ b/HTML/Summar_flower.html
@@ -181,6 +181,64 @@ All Flowers</a>
       </div>
 
 
-      
+            <div class="parents_6">
+
+  <div class="dropdown">
+    <button class="button_9">Sort: Relevance ▼</button>
+    <div class="dropdown-content">
+      <label><input type="checkbox"> Relevance</label>
+      <label><input type="checkbox"> Relevance</label>
+      <label><input type="checkbox"> Relevance</label>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button class="button_9">Occasion ▼</button>
+    <div class="dropdown-content">
+      <label><input type="checkbox"> Birthday</label>
+      <label><input type="checkbox"> Sympathy</label>
+      <label><input type="checkbox"> Anniversary</label>
+      <label><input type="checkbox"> Get Well</label>
+      <label><input type="checkbox"> Congratulations</label>
+      <label><input type="checkbox"> Thinking of You</label>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button class="button_9">Flower Type ▼</button>
+    <div class="dropdown-content">
+      <label><input type="checkbox"> Rose</label>
+      <label><input type="checkbox"> Lily</label>
+      <label><input type="checkbox"> Sunflower</label>
+      <label><input type="checkbox"> Carnation</label>
+      <label><input type="checkbox"> Daisy</label>
+      <label><input type="checkbox"> Snapdragon</label>
+      <label><input type="checkbox"> Hydrangea</label>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button class="button_9">Color ▼</button>
+    <div class="dropdown-content">
+      <label><input type="checkbox"> White</label>
+      <label><input type="checkbox"> Pink</label>
+      <label><input type="checkbox"> Purple</label>
+      <label><input type="checkbox"> Red</label>
+      <label><input type="checkbox"> Yellow</label>
+      <label><input type="checkbox"> Orange</label>
+      <label><input type="checkbox"> Green</label>
+    </div>
+  </div>
+
+  <div class="dropdown">
+    <button class="button_9">Price Range ▼</button>
+    <div class="dropdown-content">
+      <label><input type="checkbox"> $45 - $60</label>
+      <label><input type="checkbox"> $61 - $75</label>
+      <label><input type="checkbox"> $76 - $90</label>
+      <label><input type="checkbox"> Above $90</label>
+    </div>
+  </div>
+</div>
 </body>
 </html>
