--- a/HTML/index.html
+++ b/HTML/index.html
@@ -220,7 +220,9 @@ All Flowers</a>
         <p class="B1">$55 - $75</p>
         </div>
       </div>
+      <a href="../HTML/Summar_flower.html">
          <button class="button_2">SHOP SUMMER</button>
+         </a>
      </div>
 
 
