--- a/HTML/Farther_gift.html
+++ b/HTML/Farther_gift.html
@@ -176,8 +176,8 @@ All Flowers</a>
 
 
       <div class="parents_5">
-        <p class="Summer_text">Summer Collection: Flowers, Plants & Gifts</p>
-        <p class="Summer_text_2"><p>Summer is the perfect time to enjoy the outdoors and show your loved ones how much you care. Here at Proflowers, we have everything you need to make</p><p>the season bright, from beautiful<u>summer flowers</u>  and plants to unique <u>summer gifts</u>. Our flowers are fresh and vibrant, while our <u>summer plants</u> are sure to</p><p>please. And for those who want to really impress their loved ones, we have a selection of top-quality gifts that will make them smile from June all the way</p> through August. Take a look at our summer collection today and send an incredible seasonal gift today.</p>
+        <p class="Summer_text">Father's Day Gifts</p>
+        <p class="Summer_text_2"><p>As June rolls around, it's time to begin looking for the perfect Father's Day gifts. At Proflowers, we provide Father's Day gift delivery so you</p> can send your dad a thoughtful present on his special day.</p>
       </div>
 
 
@@ -246,28 +246,28 @@ All Flowers</a>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/P4251_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
-  <p class="summar_text">Lucky Lily Bouquet</p>
-  <p class="summar_text_1">$55 - $95</p>
+  <p class="summar_text">Rainbow Garden of Blooms</p>
+  <p class="summar_text_1">$95</p>
  </div>
 
 
  <div class="summer_parents">
    <div class="A">
-  <img src="../Flowerimg/R5544P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/GE327_LOL_preset_proflowers-mx-tile-wide-sv-new.jpeg" class="summer_img">
   </div>
-  <p class="summar_text">Sweet As Can Be Bouquet</p>
-  <p class="summar_text_1">$55 - $75</p>
+  <p class="summar_text">Sweet Tooth Belgian Chocolate–<br>Dipped Treat Tray</p>
+  <p class="summar_text_1">$100</p>
  </div>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/P4004SY_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
 
-  <p class="summar_text">Neon Lights Bouquet</p>
-  <p class="summar_text_1">$55 - $85</p>
+  <p class="summar_text">Memorial Magnolia Tree</p>
+  <p class="summar_text_1">$100</p>
  </div>
 
 </div>
@@ -277,30 +277,30 @@ All Flowers</a>
 
    <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/PB11_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Lucky Lily Bouquet</p>
-  <p class="summar_text_3">$55 - $95</p>
+  <p class="summar_text_2">Gardenia Bonsai</p>
+  <p class="summar_text_3">$85 - $125</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/FM079_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/P1487_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Cotton Candy Peony Bouquet</p>
-  <p class="summar_text_3">$75 - $85</p>
+  <p class="summar_text_2">Braided Money Tree Grove Bonsai</p>
+  <p class="summar_text_3">$105</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/V5762D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/X1011_LOL_preset_proflowers-mx-tile-wide-sv-new.jpg" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Paloma Please Bouquet</p>
-  <p class="summar_text_3">$60 - $120</p>
+  <p class="summar_text_2">Mrs. Fields Sunshine Basket Large</p>
+  <p class="summar_text_3">$105</p>
  </div>
 
 
@@ -311,28 +311,28 @@ All Flowers</a>
 
   <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/FE84_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/FK1060_LAY_preset_proflowers-mx-tile-wide-sv-lay.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Red Rose Bouquet</p>
-  <p class="summar_text_5">$45 - $92</p>
+  <p class="summar_text_4">Lavender Fields Mixed Flower Bouquet</p>
+  <p class="summar_text_5">$50 - $75</p>
  </div>
 
 
  <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/FW90_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/P2296_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Mixed Roses</p>
-  <p class="summar_text_5">$45 - $77</p>
+  <p class="summar_text_4">Red Prayer Plant</p>
+  <p class="summar_text_5">$50</p>
  </div>
 
 
   <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/V1PKP_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/WC2207_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Picture Perfect Pink Rose Bouquet</p>
-  <p class="summar_text_5">$85 - $200</p>
+  <p class="summar_text_4">Gourmet Deluxe Gift Basket</p>
+  <p class="summar_text_5">$130</p>
  </div>
 
 </div>
