--- a/HTML/index.html
+++ b/HTML/index.html
@@ -235,7 +235,10 @@ All Flowers</a>
     <div class="happiest_3">
      <p class="happiest_text">happiest of dad's days</p>
      <p class="happiest_text-1">Say thanks to day with a special gift this Farther's Day ,June<br>15th. </p>
+
+     <a href="../HTML/Farther_gift.html">
        <button class="button_3">SHOP FATHER'S DAY</button>
+       </a>
     </div>
 
   </div>
