--- a/HTML/index.html
+++ b/HTML/index.html
@@ -284,7 +284,7 @@ All Flowers</a>
         <p class="C1">$60</p>
         </div>
       </div>
-         <button class="button_4">SHOP FATHER'S DAY GIFTS</button>
+         <button class="button_4">SHOP GRADUAION</button>
      </div>
 
 
