--- a/HTML/index.html
+++ b/HTML/index.html
@@ -284,7 +284,9 @@ All Flowers</a>
         <p class="C1">$60</p>
         </div>
       </div>
+      <a href="../HTML/graduation.html">
          <button class="button_4">SHOP GRADUAION</button>
+         </a>
      </div>
 
 
