--- a/HTML/graduation.html
+++ b/HTML/graduation.html
@@ -176,8 +176,8 @@ All Flowers</a>
 
 
       <div class="parents_5">
-        <p class="Summer_text">Summer Collection: Flowers, Plants & Gifts</p>
-        <p class="Summer_text_2"><p>Summer is the perfect time to enjoy the outdoors and show your loved ones how much you care. Here at Proflowers, we have everything you need to make</p><p>the season bright, from beautiful<u>summer flowers</u>  and plants to unique <u>summer gifts</u>. Our flowers are fresh and vibrant, while our <u>summer plants</u> are sure to</p><p>please. And for those who want to really impress their loved ones, we have a selection of top-quality gifts that will make them smile from June all the way</p> through August. Take a look at our summer collection today and send an incredible seasonal gift today.</p>
+        <p class="Summer_text">Graduation Flowers & Gifts</p>
+        <p class="Summer_text_2"><p>A graduation is a momentous occasion that should be celebrated in the highest regard. And whether it is from 8th grade, high school, college, grad school, </p><p>or beyond, sending graduation flowers to help the scholar celebrate is a great gesture! And we at Proflowers have a plethora of arrangements and gifts to</p> choose from for their celebration, so whoever the grad is, we have something perfect for them.
       </div>
 
 
@@ -246,28 +246,28 @@ All Flowers</a>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5661D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/PRPINK24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
-  <p class="summar_text">Lucky Lily Bouquet</p>
-  <p class="summar_text_1">$55 - $95</p>
+  <p class="summar_text">Pink Forever Roses</p>
+  <p class="summar_text_1">$75 - $260</p>
  </div>
 
 
  <div class="summer_parents">
    <div class="A">
-  <img src="../Flowerimg/R5544P_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/PRLAV24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
   </div>
-  <p class="summar_text">Sweet As Can Be Bouquet</p>
-  <p class="summar_text_1">$55 - $75</p>
+  <p class="summar_text">Lavender Forever Rose</p>
+  <p class="summar_text_1">$75 - $260</p>
  </div>
 
   <div class="summer_parents">
     <div class="A">
-  <img src="../Flowerimg/R5556D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
+  <img src="../Flowerimg/PRRED24_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img">
     </div>
 
-  <p class="summar_text">Neon Lights Bouquet</p>
-  <p class="summar_text_1">$55 - $85</p>
+  <p class="summar_text">Red Forever Roses</p>
+  <p class="summar_text_1">$75 - $260</p>
  </div>
 
 </div>
@@ -277,30 +277,30 @@ All Flowers</a>
 
    <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/R5549D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/C5375CHD_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Lucky Lily Bouquet</p>
-  <p class="summar_text_3">$55 - $95</p>
+  <p class="summar_text_2">Light of My Life Bouquet and<br> Chocolate Bundle</p>
+  <p class="summar_text_3">$73 - $128</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/FM079_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/E5440D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Cotton Candy Peony Bouquet</p>
-  <p class="summar_text_3">$75 - $85</p>
+  <p class="summar_text_2">Long Stem Pink Rose Bouquet</p>
+  <p class="summar_text_3">$75 - $200</p>
  </div>
 
 
 
  <div class="summer_parents-1">
     <div class="B">
-  <img src="../Flowerimg/V5762D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
+  <img src="../Flowerimg/B59ECH_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-1">
   </div>
-  <p class="summar_text_2">Paloma Please Bouquet</p>
-  <p class="summar_text_3">$60 - $120</p>
+  <p class="summar_text_2">Romantic Long Stem Red Rose<br> Bouquet Bundles</p>
+  <p class="summar_text_3">$100 - $225</p>
  </div>
 
 
@@ -311,10 +311,10 @@ All Flowers</a>
 
   <div class="summer_parents-2">
     <div class="C">
-  <img src="../Flowerimg/FE84_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
+  <img src="../Flowerimg/FV037D_LOL_preset_proflowers-mx-tile-wide-sv-new.webp" class="summer_img-2">
   </div>
-  <p class="summar_text_4">Red Rose Bouquet</p>
-  <p class="summar_text_5">$45 - $92</p>
+  <p class="summar_text_4">Love on the Line Calla Lily Bouquet</p>
+  <p class="summar_text_5">$50 - $80</p>
  </div>
 
 
