--- a/HTML/index.html
+++ b/HTML/index.html
@@ -299,7 +299,11 @@ All Flowers</a>
     <div class="blooms_3">
      <p class="blooms_text">birthday blooms</p>
      <p class="blooms_text-1">Deliver a bouquet of happiness for their big day. </p>
+     
+     <a href="../HTML/Shop_brithday.html">
        <button class="button_5">SHOP BIRTHDAY</button>
+       </a>
+
     </div>
 
   </div>
