--- a/HTML/index.html
+++ b/HTML/index.html
@@ -394,7 +394,11 @@ All Flowers</a>
         <p class="D1">$60 - $90</p>
         </div>
       </div>
+
+      <a href="../HTML/Modern_flower.html">
          <button class="button_6">SHOP MODERN BOUQUETS</button>
+         </a>
+         
      </div>
     
      <!------->
