--- a/HTML/index.html
+++ b/HTML/index.html
@@ -407,7 +407,11 @@ All Flowers</a>
       <div class="section_1">
        <p class="pnk_text">don't miss peonies season!</p>
        <p class="pank_txt_1">The ever-popular  peonies only bloom for a limited time, order today.</p>
+
+       <a href="../HTML/SHOP_PEONIES.html">
         <button class="button_7">SHOP PEONIES</button>
+        </a>
+        
       </div>
      </div>
   
@@ -485,7 +489,11 @@ All Flowers</a>
         <p class="D1">$45 - $65</p>
         </div>
       </div>
+
+      <a  href="../HTML/Local_shop.html">
          <button class="button_8">SHOP LOCAL</button>
+         </a>
+
      </div>
 
 <div class="parents_8">
